fix: alignment of table filter options

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -1,15 +1,15 @@
 *{
-  color:#78a8ec;
+  color:#a3c6f6;
   background-color: #111a2c; 
 }
 
 .data-table{
 margin: 3%;
-background: rgba( 255, 255, 255, 0.25 );
+/* background: rgba( 255, 255, 255, 0.25 ); */
 box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.5 );
 backdrop-filter: blur( 5px );
 -webkit-backdrop-filter: blur( 5px );
-border-radius: px;
+border-radius: 3%;
 /* border: 1px solid rgba( 255, 255, 255, 0.18 ); */
 }
 
@@ -19,8 +19,17 @@ border-radius: px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border-radius: 10px !important;
   /* height: 100vh;
   width: 100vw; */
+}
+.dropdown-options{
+  display: flex;
+  justify-content: space-between;
+}
+.dropdown-block{
+  padding: 5%;
+  margin-right: 10%;
 }
 
 .table-header {
@@ -41,7 +50,7 @@ border-radius: px;
 
 .table {
   width: 95vw;
-  height: 90vh;
+  height: 80vh;
   border-radius: 0 !important;
 }
 
